# proxy_gui

./: .env  .env.example  .env.test  .gitignore  README.md  build.ps1  claude_proxy_gui.py  pyproject.toml
claude_proxy/: app.py  config.py  logger.py  proxy.py  startup.py  tray.py
claude_proxy/gui/: __init__.py  key_manager.py  main_window.py  model_pool.py  ranking.py  utils.py
src/claude_proxy/: __init__.py  app.py  config.py  connection_pool.py  proxy.py  stats.py
src/claude_proxy/gui/: __init__.py  channel_status.py  config_window.py  main_window.py  model_pool.py  proxy_auto.py
