[project]
name = "proxy-gui"
version = "0.1.0"
description = "Windows GUI proxy for Claude-compatible requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.0",
    "pillow>=11.0.0",
    "pystray>=0.19.5",
    "pywin32>=308; sys_platform == 'win32'",
    "ttkthemes>=3.2.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
